[project]
name = "cycarla-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tensorturtle", email = "tensorturtle@gmail.com" },
    { name = "Maplef", email = "i@maplef.top"}
]
# Python version is fixed to 3.10 because carla package doesn't support higher versions.
requires-python = "~=3.10.0"
dependencies = [
    "flask-socketio>=5.4.1",
    "flask>=3.1.0",
    "pygame>=2.6.1",
    "bleak~=0.20.0",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "flask-cors>=5.0.0",
    "pycycling>=0.4.0",
    "carla>=0.9.16",
    "pyinstaller>=6.11.1",
]

# See documentation:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#creating-executable-scripts
[project.scripts]
cycarla-agent = "cycarla_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nuitka>=2.4.11",
    "pyinstaller>=6.11.1",
]

